Add dao and model to register app

--- a/RegApp/WebContent/register.html
+++ b/RegApp/WebContent/register.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <h1>Welcome for registration</h1>
-	<form action="register" method="get">
+	<form action="register" method="post">
 	
 		Enter Email : <input type="text" name="email" id="email"/></br>
-		Enter Password : <input type="text" name="pwd" id="pwd" /></br>
-		Re-Enter Password : <input type="text" name="pwd" id="pwd" /></br>
+		Enter Password : <input type="password" name="pwd" id="pwd" /></br>
+		Re-Enter Password : <input type="password" name="repwd" id="pwd" /></br>
 		
 		<input type="submit" value="Submit" />
 	
